--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,5 @@ body {
   font-family: "Rubik", sans-serif;
   min-height: 100%;
   min-width: 100%;
+  background-color: rgba(240, 188, 34, 90%);
 }
